--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+title: README Entrega 25/04
-
+#+options: h:1 num:nil toc:nil
 * Correr el servidor de forma local
 
 ** Para iniciar el servidor:  
@@ -14,12 +14,20 @@ npm test
 #+end_src
 
 ** El servidor intenta conectarse a una base de datos, por defecto en alguna de urls: 
+#+begin_src bash
+mongodb://127.0.0.1:27017/ecommerce
 
-*** mongodb://127.0.0.1:27017/ecommerce
+mongodb://localhost:27017/ecommerce
+#+end_src
 
-*** mongodb://localhost:27017/ecommerce
 
-** Se puede cambiar el string de conexión a la base de datos en src/config/mongoose.config.js
+
+
+** Se puede cambiar el string de conexión a la base de datos en 
+   #+begin_src bash
+src/config/mongoose.config.js   
+   #+end_src
+
 
 
 * Notas a esta entrega
